manifests/taskd/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: taskd
  namespace: taskd
spec:
  selector:
    matchLabels:
      app: taskd
  serviceName: taskd
  replicas: 1
  template:
    metadata:
      labels:
        app: taskd
    spec:
      imagePullSecrets:
      - name: registry-creds
      containers:
      - name: taskd
        image: registry.bgottlob.com/taskd:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: data
          mountPath: /data/taskd
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: linode-block-storage-retain
      resources:
        requests:
          storage: 1Gi
