manifests/taskd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskd
  namespace: taskd
  labels:
    app: taskd
spec:
  type: NodePort
  ports:
  - name: taskd
    port: 53589
    targetPort: 53589
    nodePort: 30000
  selector:
    app: taskd
