manifests/taskd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskd
  namespace: taskd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bgottlob.com
    secretName: taskd-tls
  rules:
  - host: taskd.bgottlob.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: taskd
            port:
              number: 80
